[gd_scene load_steps=31 format=2]

[ext_resource path="res://MainMenu/Resources/Themes/Values.theme" type="Theme" id=1]
[ext_resource path="res://MainMenu/Resources/Themes/Labels.theme" type="Theme" id=2]
[ext_resource path="res://Global/Resources/Fonts/Ubuntu/Ubuntu20.tres" type="DynamicFont" id=3]
[ext_resource path="res://MainMenu/Resources/Themes/Buttons.theme" type="Theme" id=4]
[ext_resource path="res://MainMenu/MainMenuManager.gd" type="Script" id=5]
[ext_resource path="res://MainMenu/Resources/Scripts/ButtonHelper.gd" type="Script" id=6]
[ext_resource path="res://MainMenu/Resources/Styleboxes/RollButtonPressed.stylebox" type="StyleBox" id=7]
[ext_resource path="res://MainMenu/Resources/Styleboxes/RollButtonNormal.stylebox" type="StyleBox" id=8]
[ext_resource path="res://MainMenu/Resources/Styleboxes/RollButtonHover.stylebox" type="StyleBox" id=9]
[ext_resource path="res://MainMenu/Resources/Styleboxes/RollButtonFocus.stylebox" type="StyleBox" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.403922, 0.431373, 0.470588, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.403922, 0.431373, 0.470588, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.403922, 0.431373, 0.470588, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.403922, 0.431373, 0.470588, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.403922, 0.431373, 0.470588, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.403922, 0.431373, 0.470588, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.403922, 0.431373, 0.470588, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.403922, 0.431373, 0.470588, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.403922, 0.431373, 0.470588, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.403922, 0.431373, 0.470588, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.403922, 0.431373, 0.470588, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.403922, 0.431373, 0.470588, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.403922, 0.431373, 0.470588, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.403922, 0.431373, 0.470588, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.403922, 0.431373, 0.470588, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.403922, 0.431373, 0.470588, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.219608, 0.329412, 0.458824, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.184314, 0.223529, 0.321569, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_detail = 20

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.184314, 0.223529, 0.321569, 0.886275 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_detail = 20

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainContainer" type="VBoxContainer" parent="."]
margin_top = 50.0
margin_right = 600.0
margin_bottom = 800.0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsContainer" type="VBoxContainer" parent="MainContainer"]
margin_right = 600.0
margin_bottom = 67.0

[node name="LabelsContainer" type="HBoxContainer" parent="MainContainer/StatsContainer"]
margin_right = 600.0
margin_bottom = 34.0
theme = ExtResource( 2 )

[node name="Correct" type="Label" parent="MainContainer/StatsContainer/LabelsContainer"]
margin_right = 197.0
margin_bottom = 34.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.290196, 0.741176, 0.517647, 1 )
text = "Poprawne"
align = 1
valign = 1

[node name="Total" type="Label" parent="MainContainer/StatsContainer/LabelsContainer"]
margin_left = 201.0
margin_right = 398.0
margin_bottom = 34.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.129412, 0.552941, 0.831373, 1 )
text = "W sumie"
align = 1
valign = 1

[node name="Wrong" type="Label" parent="MainContainer/StatsContainer/LabelsContainer"]
margin_left = 402.0
margin_right = 600.0
margin_bottom = 34.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.854902, 0.321569, 0.309804, 1 )
text = "ZÅ‚e"
align = 1
valign = 1

[node name="ValuesContainer" type="HBoxContainer" parent="MainContainer/StatsContainer"]
margin_top = 38.0
margin_right = 600.0
margin_bottom = 67.0
theme = ExtResource( 1 )

[node name="Correct" type="Label" parent="MainContainer/StatsContainer/ValuesContainer"]
margin_right = 197.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.290196, 0.741176, 0.517647, 1 )
text = "0"
align = 1
valign = 1

[node name="Total" type="Label" parent="MainContainer/StatsContainer/ValuesContainer"]
margin_left = 201.0
margin_right = 398.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.129412, 0.552941, 0.831373, 1 )
text = "0"
align = 1
valign = 1

[node name="Wrong" type="Label" parent="MainContainer/StatsContainer/ValuesContainer"]
margin_left = 402.0
margin_right = 600.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.854902, 0.321569, 0.309804, 1 )
text = "0"
align = 1
valign = 1

[node name="QuestionContainer" type="VBoxContainer" parent="MainContainer"]
margin_top = 107.0
margin_right = 600.0
margin_bottom = 128.0

[node name="Question" type="Label" parent="MainContainer/QuestionContainer"]
margin_left = 50.0
margin_right = 550.0
margin_bottom = 21.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
align = 1
autowrap = true

[node name="Image" type="TextureRect" parent="MainContainer/QuestionContainer"]
visible = false
margin_left = 50.0
margin_top = 27.0
margin_right = 550.0
margin_bottom = 277.0
rect_min_size = Vector2( 500, 250 )
size_flags_horizontal = 6
expand = true

[node name="AnswersContainer" type="VBoxContainer" parent="MainContainer"]
margin_top = 168.0
margin_right = 600.0
margin_bottom = 500.0

[node name="Long" type="VBoxContainer" parent="MainContainer/AnswersContainer"]
margin_right = 600.0
margin_bottom = 332.0
size_flags_vertical = 5
theme = ExtResource( 4 )
alignment = 1

[node name="Answer1" type="Button" parent="MainContainer/AnswersContainer/Long"]
margin_left = 50.0
margin_right = 550.0
margin_bottom = 80.0
rect_min_size = Vector2( 500, 80 )
size_flags_horizontal = 4
custom_styles/pressed = SubResource( 1 )
custom_styles/disabled = SubResource( 2 )
toggle_mode = true
script = ExtResource( 6 )

[node name="Text" type="Label" parent="MainContainer/AnswersContainer/Long/Answer1"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer2" type="Button" parent="MainContainer/AnswersContainer/Long"]
margin_left = 50.0
margin_top = 84.0
margin_right = 550.0
margin_bottom = 164.0
rect_min_size = Vector2( 500, 80 )
size_flags_horizontal = 4
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
toggle_mode = true
script = ExtResource( 6 )

[node name="Text" type="Label" parent="MainContainer/AnswersContainer/Long/Answer2"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer3" type="Button" parent="MainContainer/AnswersContainer/Long"]
margin_left = 50.0
margin_top = 168.0
margin_right = 550.0
margin_bottom = 248.0
rect_min_size = Vector2( 500, 80 )
size_flags_horizontal = 4
custom_styles/pressed = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
toggle_mode = true
script = ExtResource( 6 )

[node name="Text" type="Label" parent="MainContainer/AnswersContainer/Long/Answer3"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer4" type="Button" parent="MainContainer/AnswersContainer/Long"]
margin_left = 50.0
margin_top = 252.0
margin_right = 550.0
margin_bottom = 332.0
rect_min_size = Vector2( 500, 80 )
size_flags_horizontal = 4
custom_styles/pressed = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
toggle_mode = true
script = ExtResource( 6 )

[node name="Text" type="Label" parent="MainContainer/AnswersContainer/Long/Answer4"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Short" type="GridContainer" parent="MainContainer/AnswersContainer"]
visible = false
margin_top = 336.0
margin_right = 600.0
margin_bottom = 500.0
theme = ExtResource( 4 )
columns = 2

[node name="Answer1" type="Button" parent="MainContainer/AnswersContainer/Short"]
margin_left = 48.0
margin_right = 298.0
margin_bottom = 80.0
rect_min_size = Vector2( 250, 80 )
size_flags_horizontal = 12
custom_styles/pressed = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
script = ExtResource( 6 )

[node name="Text" type="Label" parent="MainContainer/AnswersContainer/Short/Answer1"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1
autowrap = true

[node name="Answer2" type="Button" parent="MainContainer/AnswersContainer/Short"]
margin_left = 302.0
margin_right = 552.0
margin_bottom = 80.0
rect_min_size = Vector2( 250, 80 )
size_flags_horizontal = 2
custom_styles/pressed = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
script = ExtResource( 6 )

[node name="Text" type="Label" parent="MainContainer/AnswersContainer/Short/Answer2"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1
autowrap = true

[node name="Answer3" type="Button" parent="MainContainer/AnswersContainer/Short"]
margin_left = 48.0
margin_top = 84.0
margin_right = 298.0
margin_bottom = 164.0
rect_min_size = Vector2( 250, 80 )
size_flags_horizontal = 14
custom_styles/pressed = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
script = ExtResource( 6 )

[node name="Text" type="Label" parent="MainContainer/AnswersContainer/Short/Answer3"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1
autowrap = true

[node name="Answer4" type="Button" parent="MainContainer/AnswersContainer/Short"]
margin_left = 302.0
margin_top = 84.0
margin_right = 552.0
margin_bottom = 164.0
rect_min_size = Vector2( 250, 80 )
size_flags_horizontal = 2
custom_styles/pressed = SubResource( 15 )
custom_styles/disabled = SubResource( 16 )
script = ExtResource( 6 )

[node name="Text" type="Label" parent="MainContainer/AnswersContainer/Short/Answer4"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1
autowrap = true

[node name="Roll" type="Button" parent="."]
margin_left = 200.0
margin_top = 710.0
margin_right = 400.0
margin_bottom = 760.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 10 )
custom_styles/normal = ExtResource( 8 )
text = "Losuj"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpMenu" type="Control" parent="."]
margin_top = 775.0
margin_right = 600.0
margin_bottom = 1575.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContentContainer" type="VBoxContainer" parent="HelpMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpButton" type="Button" parent="HelpMenu/ContentContainer"]
margin_left = 250.0
margin_right = 350.0
margin_bottom = 25.0
rect_min_size = Vector2( 100, 25 )
size_flags_horizontal = 4
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 19 )
custom_styles/normal = SubResource( 20 )
text = "Pomoc"

[node name="Content" type="Control" parent="HelpMenu/ContentContainer"]
margin_top = 25.0
margin_right = 600.0
margin_bottom = 800.0
size_flags_vertical = 3

[node name="Background" type="ColorRect" parent="HelpMenu/ContentContainer/Content"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.184314, 0.223529, 0.321569, 0.886275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SearchContainer" type="VBoxContainer" parent="HelpMenu/ContentContainer/Content"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SearchBarContainer" type="HBoxContainer" parent="HelpMenu/ContentContainer/Content/SearchContainer"]
margin_right = 600.0
margin_bottom = 24.0
alignment = 2

[node name="SearchBar" type="LineEdit" parent="HelpMenu/ContentContainer/Content/SearchContainer/SearchBarContainer"]
margin_left = 116.0
margin_right = 516.0
margin_bottom = 24.0
rect_min_size = Vector2( 400, 0 )
align = 1
max_length = 20
clear_button_enabled = true
placeholder_text = "Szukaj w Wikipedia"

[node name="SearchButton" type="Button" parent="HelpMenu/ContentContainer/Content/SearchContainer/SearchBarContainer"]
margin_left = 520.0
margin_right = 600.0
margin_bottom = 24.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 5
text = "Szukaj"

[node name="ResultsContainer" type="VBoxContainer" parent="HelpMenu/ContentContainer/Content/SearchContainer"]
margin_top = 28.0
margin_right = 600.0
margin_bottom = 775.0
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Button1" type="Button" parent="HelpMenu/ContentContainer/Content/SearchContainer/ResultsContainer"]
visible = false
margin_right = 600.0
margin_bottom = 83.0
size_flags_vertical = 3

[node name="Button2" type="Button" parent="HelpMenu/ContentContainer/Content/SearchContainer/ResultsContainer"]
visible = false
margin_right = 600.0
margin_bottom = 93.0
size_flags_vertical = 3

[node name="Button3" type="Button" parent="HelpMenu/ContentContainer/Content/SearchContainer/ResultsContainer"]
visible = false
margin_right = 600.0
margin_bottom = 106.0
size_flags_vertical = 3

[node name="Button4" type="Button" parent="HelpMenu/ContentContainer/Content/SearchContainer/ResultsContainer"]
visible = false
margin_right = 600.0
margin_bottom = 124.0
size_flags_vertical = 3

[node name="Button5" type="Button" parent="HelpMenu/ContentContainer/Content/SearchContainer/ResultsContainer"]
visible = false
margin_right = 599.0
margin_bottom = 124.0
size_flags_vertical = 3

[node name="Button6" type="Button" parent="HelpMenu/ContentContainer/Content/SearchContainer/ResultsContainer"]
visible = false
margin_right = 600.0
margin_bottom = 149.0
size_flags_vertical = 3

[node name="Button7" type="Button" parent="HelpMenu/ContentContainer/Content/SearchContainer/ResultsContainer"]
visible = false
margin_right = 600.0
margin_bottom = 186.0
size_flags_vertical = 3

[node name="Button8" type="Button" parent="HelpMenu/ContentContainer/Content/SearchContainer/ResultsContainer"]
visible = false
margin_right = 600.0
margin_bottom = 249.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button9" type="Button" parent="HelpMenu/ContentContainer/Content/SearchContainer/ResultsContainer"]
visible = false
margin_right = 600.0
margin_bottom = 373.0
size_flags_vertical = 3

[node name="Button10" type="Button" parent="HelpMenu/ContentContainer/Content/SearchContainer/ResultsContainer"]
visible = false
margin_right = 600.0
margin_bottom = 747.0
size_flags_vertical = 3

[node name="ArticleContainer" type="VBoxContainer" parent="HelpMenu/ContentContainer/Content/SearchContainer"]
visible = false
margin_top = 28.0
margin_right = 599.0
margin_bottom = 775.0
size_flags_vertical = 3

[node name="Content" type="RichTextLabel" parent="HelpMenu/ContentContainer/Content/SearchContainer/ArticleContainer"]
margin_right = 599.0
margin_bottom = 747.0
focus_mode = 2
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
selection_enabled = true
[connection signal="gui_input" from="." to="." method="_on_MainMenu_gui_input"]
[connection signal="pressed" from="MainContainer/AnswersContainer/Long/Answer1" to="." method="button_pressed" binds= [ 0 ]]
[connection signal="pressed" from="MainContainer/AnswersContainer/Long/Answer2" to="." method="button_pressed" binds= [ 1 ]]
[connection signal="pressed" from="MainContainer/AnswersContainer/Long/Answer3" to="." method="button_pressed" binds= [ 2 ]]
[connection signal="pressed" from="MainContainer/AnswersContainer/Long/Answer4" to="." method="button_pressed" binds= [ 3 ]]
[connection signal="pressed" from="MainContainer/AnswersContainer/Short/Answer1" to="." method="button_pressed" binds= [ 0 ]]
[connection signal="pressed" from="MainContainer/AnswersContainer/Short/Answer2" to="." method="button_pressed" binds= [ 1 ]]
[connection signal="pressed" from="MainContainer/AnswersContainer/Short/Answer4" to="." method="button_pressed" binds= [ 3 ]]
[connection signal="pressed" from="Roll" to="." method="on_roll_button_pressed"]
[connection signal="pressed" from="HelpMenu/ContentContainer/HelpButton" to="." method="on_menu_search_button_pressed"]
[connection signal="text_entered" from="HelpMenu/ContentContainer/Content/SearchContainer/SearchBarContainer/SearchBar" to="." method="_on_SearchBar_text_entered"]
[connection signal="pressed" from="HelpMenu/ContentContainer/Content/SearchContainer/SearchBarContainer/SearchButton" to="." method="on_search_button_pressed"]
